Fixed: [from #1261] : Please fix the CSS gap in between the "No Results" and the actual "Results" from performing a Search in the Search box

--- a/Client/src/app/layouts/header/header.component.css
+++ b/Client/src/app/layouts/header/header.component.css
@@ -490,3 +490,8 @@ li a {
   /deep/.claim-search .mat-option {
     z-index: 4000;
   }
+  /deep/.claim-search {
+    width: 96.5% !important;
+    left: 6px;
+    margin-top: -10px;
+  }
